--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div id="topbar">
-    <img id="logo" src="/Users/adam/radium/api-docs/logo.png"/>
+    <img id="logo" src="logo.png"/>
 
   <a href="#" class="brand">Radium API</a>
 
